[package]
name = "number-loom"
description = "Multipurpose GUI and CLI tool for constructing nonograms"
version = "0.2.1"
authors = ["Paul Stansifer <paul.stansifer@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["nonogram"]
readme = "README.md"
repository = "https://github.com/paulstansifer/number-loom"

[dependencies]
image = "0.23.11"
quick-xml = "0.37.1"
indoc = "1.0"
ndarray = "0.16.1"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colorize = "0.1.0"
colored = "2.1.0"
regex = "1.11.1"
roxmltree = "0.20.0"
axohtml = "0.5.0"
indicatif = "0.17.11"
egui = "0.31.1"
eframe = "0.31.1"
rfd = "0.15.3"
itertools = "0.14.0"
egui_material_icons = "0.3.0"

[dev-dependencies]
rand = "0.8.5"

[[test]]
name = "solver-fuzzer"
path = "src/solver_fuzzer.rs"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
# poll-promise_native = { package = "poll-promise", version = "0.3.0", features = [
#     "tokio",
# ] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
# # This uses 'git' as a hack, since otherwise it won't let us have two copies of the
# # same crate with different features, even if they're under different targets.
# poll-promise_web = { git= "https://github.com/EmbarkStudios/poll-promise.git", package = "poll-promise", version = "0.3.0", features = [
#     "web",
# ] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
