[package]
name = "number-loom"
description = "Multipurpose GUI and CLI tool for constructing nonograms"
version = "0.2.2"
authors = ["Paul Stansifer <paul.stansifer@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["nonogram"]
readme = "README.md"
repository = "https://github.com/paulstansifer/number-loom"

[dependencies]
image = "0.23.11"
quick-xml = "0.37.1"
indoc = "1.0"
ndarray = "0.16.1"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colorize = "0.1.0"
colored = "2.1.0"
regex = "1.11.1"
roxmltree = "0.20.0"
axohtml = "0.5.0"
indicatif = "0.17.11"
egui = "0.31.1"
eframe = "0.31.1"
rfd = "0.15.3"
itertools = "0.14.0"
egui_material_icons = "0.3.0"
console_error_panic_hook = "0.1.7"
tokio = { version = "1", features = ["rt"] }         # Using only wasm-safe features

[dev-dependencies]
rand = "0.8.5"

[[test]]
name = "solver-fuzzer"
path = "src/solver_fuzzer.rs"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
# `js-sys` and `wasm-bindgen` are just needed for yielding!?
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
